# sleet

./: Cargo.toml  LICENSE  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml
crates/color_impl/: Cargo.toml
crates/color_impl/src/: hex.rs  lib.rs
crates/color_impl/tests/: hex.rs
crates/hex_impl/: Cargo.toml
crates/hex_impl/src/: lib.rs
crates/hex_impl/tests/: hex.rs
crates/name_from_path/: Cargo.toml
crates/name_from_path/src/: lib.rs
crates/name_from_path/tests/: convert.rs
crates/sleet_helpers/: Cargo.toml
crates/sleet_helpers/src/: lib.rs
crates/sleet_style/: Cargo.toml
crates/sleet_style/impl/: Cargo.toml
crates/sleet_style/src/: lib.rs
crates/sleet_style/tests/: ui.rs
sleet/: all.html  index.html  macro.fonts!.html  macro.fonts.html  macro.stylesheets!.html  macro.stylesheets.html  sidebar-items.js
sleet/color/: fn.hsl.html  fn.hsla.html  fn.hsv.html  fn.hsva.html  fn.rgb.html  fn.rgb8.html  fn.rgba.html  fn.rgba8.html  index.html  macro.hex.html  sidebar-items.js  struct.Color.html
sleet/color/into_color/: index.html  sidebar-items.js  trait.FromColor.html  trait.IntoColor.html
sleet/colorscheme/: index.html  sidebar-items.js
sleet/colorscheme/catppuccin/: index.html  sidebar-items.js
src/: color.rs  font.rs  lib.rs  stylesheet.rs
src/color/: into_color.rs  mod.rs
src/colorscheme/: catppuccin.rs  mod.rs  nord.rs
src/sleet/: font.rs.html  lib.rs.html  stylesheet.rs.html
tests/: font.rs  ui.rs
tests/ui/: stylesheet-button-0.rs  stylesheet-container-0.rs
(+151 files in other folders)
