[workspace]
members = [
    "crates/color_impl"
]

[package]
name = "sleet"
version = "0.0.1"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
iced_core = "0.5"
iced_style = "0.4"
palette = { version = "0.6", optional = true }

sleet_color_impl = { path = "crates/color_impl" }

[features]
colorschemes = []

[dev-dependencies]
trybuild = "1"
