[workspace]
members = [
    "crates/hex_impl"
]

[package]
name = "sleet"
version = "0.0.1"
authors = ["Sachin Cherian <sachinctl@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
iced_core = "0.5"
iced_style = "0.4"
palette = { version = "0.6", optional = true }

hex_impl = { path = "crates/hex_impl" }

[features]
colorschemes = []

[dev-dependencies]
trybuild = "1"
